--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,35 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+
+<title>Cryptography Puzzle Website with NLP (Prototype) </title>
+<link href="main.css" rel="stylesheet">
+//<link rel="icon" href="kronosVase.png">
+
+<meta charset="utf-8">
+  <title>Prototype</title>
+	 
+</head>
+
+<body>
+
+<h1 id="shadow">Cryptography Puzzle</h1>
+<h2>Functional Prototype</h2>
+<p>
+<br>Put the puzzle here</br>
+
+</p>
+
+<p></p>
+
+<button onclick="toggleCSS()">Switch Language</button>
+
+<footer>
+<p>Copyright &copy; 2024 Aaron Brown, Emily Fasano, Sergio Gaud, Brock Kern</p>
+</footer>
+
+</body>
+
+</html>
+
 
