Brock- Added Buttons
Added the 2nd button and also added 2 shells of functions in the script in the head for the buttons to work

--- a/Index.html
+++ b/Index.html
@@ -8,6 +8,17 @@
 
 <meta charset="utf-8">
   <title>Prototype</title>
+
+<script>
+	function toggleCSS(){
+		//emily u handle this one
+	}
+
+	function decrypt(){
+		
+	}
+	
+</script>
 	 
 </head>
 
@@ -23,6 +34,7 @@
 <p></p>
 
 <button onclick="toggleCSS()">Switch Language</button>
+<button onclick="decrypt()">Decrypt</button>
 
 <footer>
 <p>Copyright &copy; 2024 Aaron Brown, Emily Fasano, Sergio Gaud, Brock Kern</p>
