--- a/Index.html
+++ b/Index.html
@@ -4,15 +4,13 @@
 
 <title>Cryptography Puzzle Website with NLP (Prototype) </title>
 <link href="main.css" rel="stylesheet">
-//<link rel="icon" href="kronosVase.png">
+
 
 <meta charset="utf-8">
   <title>Prototype</title>
 
 <script>
-	function toggleCSS(){
-		//emily u handle this one
-	}
+	
 
 	function decrypt(){
 		
@@ -33,7 +31,8 @@
 
 <p></p>
 
-<button onclick="toggleCSS()">Switch Language</button>
+
+<br><a href="Spanish.html">Translate</a></br>
 <button onclick="decrypt()">Decrypt</button>
 
 <footer>
