--- a/Spanish.html
+++ b/Spanish.html
@@ -1,1 +1,44 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
 
+<title>Un Sitio Web de Rompecabezas de Criptografía con NLP (Prototipo)</title>
+<link href="main.css" rel="stylesheet">
+
+
+<meta charset="utf-8">
+  <title>Prototipo</title>
+
+<script>
+	
+
+	function decrypt(){
+		
+	}
+	
+</script>
+	 
+</head>
+
+<body>
+
+<h1 id="shadow">Rompecabezas de Criptografía</h1>
+<h2>Prototipo Funcional</h2>
+<p>
+<br>Put the puzzle here</br>
+
+</p>
+
+<p></p>
+
+
+<br><a href="Index.html">English</a></br>
+<button onclick="decrypt()">Decrypt</button>
+
+<footer>
+<p>Copyright &copy; 2024 Aaron Brown, Emily Fasano, Sergio Gaud, Brock Kern</p>
+</footer>
+
+</body>
+
+</html>
