--- a/Index.html
+++ b/Index.html
@@ -32,7 +32,7 @@
 <p></p>
 
 
-<br><a href="Spanish.html">Translate</a></br>
+<br><a href="Spanish.html">Spanish</a></br>
 <button onclick="decrypt()">Decrypt</button>
 
 <footer>
