did decrypt()- Brock

--- a/Index.html
+++ b/Index.html
@@ -10,12 +10,9 @@
   <title>Prototype</title>
 
 <script>
-	
-
 	function decrypt(){
-		
+		document.getElementById('PUZZLE').innerHTML = "THIS IS THE DECRYPTED STUFF";
 	}
-	
 </script>
 	 
 </head>
@@ -28,7 +25,7 @@
 <br>Put the puzzle here</br>
 
 </p>
-
+<p id="PUZZLE">THIS IS THE PUZZLE (will be encrypted)</p>
 <p></p>
 
 
