--- a/Spanish.html
+++ b/Spanish.html
@@ -32,8 +32,8 @@
 <p></p>
 
 
-<br><a href="Index.html">English</a></br>
-<button onclick="decrypt()">Decrypt</button>
+<br><a href="Index.html">El Inglés</a></br>
+<button onclick="decrypt()">Descifrar</button>
 
 <footer>
 <p>Copyright &copy; 2024 Aaron Brown, Emily Fasano, Sergio Gaud, Brock Kern</p>
