--- a/Spanish.html
+++ b/Spanish.html
@@ -10,12 +10,9 @@
   <title>Prototipo</title>
 
 <script>
-	
-
 	function decrypt(){
-		
+		document.getElementById('PUZZLE').innerHTML = "THIS IS THE DECRYPTED STUFF";
 	}
-	
 </script>
 	 
 </head>
