--- a/Spanish.html
+++ b/Spanish.html
@@ -27,6 +27,8 @@
 </p>
 
 <p></p>
+<p id="PUZZLE">THIS IS THE PUZZLE (will be encrypted)</p>
+<p></p></p>
 
 
 <br><a href="Index.html">El Inglés</a></br>
