Added menu in <nav>

--- a/Index.html
+++ b/Index.html
@@ -18,7 +18,13 @@
 </head>
 
 <body>
-
+<nav>
+	<ul>
+		<li><a href="index.html">Home</a></li>
+		<li><a href="Puzzle_page.html">Puzzle Page</a></li>
+		<li><a href="#">More Info</a></li>
+	</ul>
+</nav>
 <h1 id="shadow">Cryptography Puzzle</h1>
 <h2>Functional Prototype</h2>
 <p>
