Added menu in <nav>

--- a/Spanish.html
+++ b/Spanish.html
@@ -18,7 +18,13 @@
 </head>
 
 <body>
-
+<nav>
+	<ul>
+		<li><a href="index.html">Inicio</a></li>
+		<li><a href="puzzle_page.html">Puzzle Página</a></li>
+		<li><a href="#">Más información</a></li>
+	</ul>
+</nav>
 <h1 id="shadow">Rompecabezas de Criptografía</h1>
 <h2>Prototipo Funcional</h2>
 <p>
