--- a/Spanish.html
+++ b/Spanish.html
@@ -36,7 +36,7 @@
 
 
 
-<br><a href="Index.html">El Inglés</a></br>
+<br><a href="Index.html">Traducir al inglés</a></br>
 <button onclick="decrypt()">Descifrar</button>
 
 <footer>
