--- a/Spanish.html
+++ b/Spanish.html
@@ -21,7 +21,7 @@
 <nav>
 	<ul>
 		<li><a href="index.html">Inicio</a></li>
-		<li><a href="puzzle_page.html">Puzzle Página</a></li>
+		<li><a href="Puzzle_page_Spanish.html">Puzzle Página</a></li>
 		<li><a href="#">Más información</a></li>
 	</ul>
 </nav>
