--- a/Puzzle_page.html
+++ b/Puzzle_page.html
@@ -5,12 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Puzzle Page</title>
     <!-- Link to the main.css stylesheet -->
-    <link rel="stylesheet" href="main.css">
-    <script>
-        function decrypt(){
-            document.getElementById('PUZZLE').innerHTML = "THIS IS THE DECRYPTED STUFF";
-        }
-    </script>
+    <link rel="stylesheet" href="main.css">  
 </head>
 <body>
 
@@ -29,15 +24,15 @@
     <div class="box" id="puzzle-box">
         <h2>Puzzle 1</h2>
         <!-- Cipher text -->
-        <p>Example cipher</p>
+        <div id ="puzzleText">Example cipher</div>
         <!-- Text box for puzzle input -->
-        <input type="text" class="text-input" placeholder="Type your answer here...">
+        <input type="text" id="key" class="text-input" placeholder="Type your answer here...">
         <label for="Ciphers">Select a cipher:</label>
             <select name="ciphers" id="ciphers">
                 <option value="rot13">rot13</option>
                 <option value="caesar">Caesar</option>
             </select>
-        <button onclick="decrypt()">Decrypt</button>
+        <button onclick="updateText()">Decrypt</button>
     </div>
 
     <!-- Output Box -->
@@ -45,10 +40,11 @@
         <h2>Answer</h2>
         <!-- Plaintext for decrypted text -->
         <p>Hint: (button)</p>
-        <p>Decrypted text</p>
-        <p id="PUZZLE">THIS IS THE PUZZLE (will be encrypted)</p>
+        <div>Output:</p>
+        <p id="output">THIS IS THE PUZZLE (will be encrypted)</p>
         
     </div>
 </div>
+<script src="./script.js"></script>
 </body>
 </html>
