--- a/Puzzle_page.html
+++ b/Puzzle_page.html
@@ -40,11 +40,18 @@
         <h2>Answer</h2>
         <!-- Plaintext for decrypted text -->
         <p>Hint: (button)</p>
-        <div>Output:</p>
+        <p>Output:</p>
         <p id="output">THIS IS THE PUZZLE (will be encrypted)</p>
-        
     </div>
+
+    <div class="box" id="shmeep-shmop">
+        <h2>Hint</h2>
+
+        <button id="hint">Show Hint</button>
+    </div>
+
 </div>
+
 <script src="./script.js"></script>
 </body>
 </html>
