--- a/index.html
+++ b/index.html
@@ -55,9 +55,8 @@ function googleTranslateElementInit() {
 <p></p>
 
 <button onclick="translateSpanish()">Spanish</button>
-//<br><a href="Spanish.html">Spanish</a></br>
 <button onclick="decrypt()">Decrypt</button>
-
+<br><a href="Spanish.html">Spanish</a></br>
 <footer>
 <p>Copyright &copy; 2024 Aaron Brown, Emily Fasano, Sergio Gaud, Brock Kern</p>
 </footer>
