--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ function googleTranslateElementInit() {
 <p id="PUZZLE">THIS IS THE PUZZLE (will be encrypted)</p>
 <p></p>
 
-<button onclick="translateSpanish()">Spanish</button>
+<button onclick="googleTranslateElementInit()">Spanish</button>
 <button onclick="decrypt()">Decrypt</button>
 <br><a href="Spanish.html">Spanish</a></br>
 <footer>
