--- a/Puzzle_page.html
+++ b/Puzzle_page.html
@@ -6,6 +6,16 @@
     <title>Puzzle Page</title>
     <!-- Link to the main.css stylesheet -->
     <link rel="stylesheet" href="main.css">  
+    <div id="google_translate_element"></div>
+
+<script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+}
+</script>
+
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+	
 </head>
 <body>
 
