--- a/Puzzle_page.html
+++ b/Puzzle_page.html
@@ -25,7 +25,11 @@ function googleTranslateElementInit() {
 <nav>
     <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="puzzle_page.html">Puzzle Page</a></li>
+        <li><a href="puzzle_page.html">Puzzle 1</a></li>
+        <li><a href="puzzle_page2.html">Puzzle 2</a></li>
+        <li><a href="puzzle_page3.html">Puzzle 3</a></li>
+        <li><a href="puzzle_page4.html">Puzzle 4</a></li>
+        <li><a href="puzzle_page5.html">Final Puzzle</a></li>
         <li><a href="#">More Info</a></li>
     </ul>
 </nav>
@@ -44,6 +48,7 @@ function googleTranslateElementInit() {
             <select name="ciphers" id="ciphers">
                 <option value="rot13">rot13</option>
                 <option value="caesar">Caesar</option>
+		<option value="vigenere">Vigenere</option>
             </select>
         <button onclick="updateText()">Decrypt</button>
     </div>
