--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@ function googleTranslateElementInit() {
 <nav>
 	<ul>
 		<li><a href="index.html">Home</a></li>
-        	<li><a href="puzzle_page.html">Puzzle 1</a></li>
-        	<li><a href="puzzle_page2.html">Puzzle 2</a></li>
-        	<li><a href="puzzle_page3.html">Puzzle 3</a></li>
-        	<li><a href="puzzle_page4.html">Puzzle 4</a></li>
-        	<li><a href="puzzle_page5.html">Final Puzzle</a></li>
+        	<li><a href="Puzzle_page.html">Puzzle 1</a></li>
+        	<li><a href="Puzzle_page2.html">Puzzle 2</a></li>
+        	<li><a href="Puzzle_page3.html">Puzzle 3</a></li>
+        	<li><a href="Puzzle_page4.html">Puzzle 4</a></li>
+        	<li><a href="Puzzle_page5.html">Final Puzzle</a></li>
 		<li><a href="#">More Info</a></li>
 	</ul>
 </nav>
