--- a/Puzzle_page2.html
+++ b/Puzzle_page2.html
@@ -34,7 +34,7 @@ function googleTranslateElementInit() {
     </ul>
 </nav>
 
-<h1>Puzzle Page</h1> <!-- Bold header -->
+<h1>Puzzle Page</h1> <!-- Bold header. -->
 
 <div class="container">
     <!-- Puzzle Box -->
