--- a/Puzzle_page4.html
+++ b/Puzzle_page4.html
@@ -75,7 +75,7 @@ function googleTranslateElementInit() {
     const hintsList = [
         "Hail Caesar!",
         "I = 1, V = 5, X = 10",
-        "What's nine plus ten(not 19)"
+        "What's nine plus ten(not 19)."
     ];
     let currentHintIndex = 0;
     function showHint() {
