--- a/Puzzle_page.html
+++ b/Puzzle_page.html
@@ -42,7 +42,7 @@ function googleTranslateElementInit() {
         <h2>Puzzle 1</h2>
         <!-- Cipher text -->
         <div id ="puzzleText">Jcfruqj hnumjw</div>
-        <!-- Text box for puzzle input -->
+        <!-- Text box for puzzle input. -->
         <input type="text" id="key" class="text-input" placeholder="Type your answer here...">
         <label for="Ciphers">Select a cipher:</label>
             <select name="ciphers" id="ciphers">
