--- a/Puzzle_page2.html
+++ b/Puzzle_page2.html
@@ -41,7 +41,7 @@ function googleTranslateElementInit() {
     <div class="box" id="puzzle-box">
         <h2>Puzzle 1</h2>
         <!-- Cipher text -->
-        <div id ="puzzleText">Jsopq Zstzg!</div>
+        <div id ="puzzleText">Htwwjhy! Ymnx nx f hfjxfw hnumjw, bmnhm mfx gjjs zxji ktw tajw 2000 djfwx.</div>
         <!-- Text box for puzzle input -->
         <input type="text" id="key" class="text-input" placeholder="Type your answer here...">
         <label for="Ciphers">Select a cipher:</label>
@@ -73,9 +73,12 @@ function googleTranslateElementInit() {
 <script>
     const hintBox = document.getElementById("hintBox");
     const hintsList = [
-        "Hail Caesar!",
+	"XXI = ?",
+	"Hail Caesar!",
+	"This year is MMXXIV",
+	"The key for this puzzle is in arabic numerals between 1 and 26",
         "I = 1, V = 5, X = 10",
-        "What's nine plus ten(not 19)"
+        
     ];
     let currentHintIndex = 0;
     function showHint() {
