--- a/Puzzle_page3.html
+++ b/Puzzle_page3.html
@@ -41,7 +41,7 @@ function googleTranslateElementInit() {
     <div class="box" id="puzzle-box">
         <h2>Puzzle 1</h2>
         <!-- Cipher text -->
-        <div id ="puzzleText">Jsopq Zstzg!</div>
+        <div id ="puzzleText">Pwfi krvm! Xjwv ewslgf mu vsoszlch qqfh ecptnwfevsg, ov kh wjwixu heev pghwit eeusg qb xjs pghwitg epr pgbjxj rj hki qrhg zstr.</div>
         <!-- Text box for puzzle input -->
         <input type="text" id="key" class="text-input" placeholder="Type your answer here...">
         <label for="Ciphers">Select a cipher:</label>
@@ -49,6 +49,7 @@ function googleTranslateElementInit() {
                 <option value="rot13">rot13</option>
                 <option value="caesar">Caesar</option>
                 <option value="vigenere">Vigenere</option>
+		<option value="secret">Secret Cipher</option>
             </select>
         <button onclick="updateText()">Decrypt</button>
     </div>
@@ -73,9 +74,11 @@ function googleTranslateElementInit() {
 <script>
     const hintBox = document.getElementById("hintBox");
     const hintsList = [
-        "Hail Caesar!",
-        "I = 1, V = 5, X = 10",
-        "What's nine plus ten(not 19)"
+        "This cipher takes a \"code\" word as input",
+        "Which cipher accepts letters as a key?",
+        "The \"code\" word starts with the letter \'c\'",
+        "The words \"code\" and \"key\" are sometimes used interchangably when describing means to decrypt text",
+        "Have you cracked the \"code\"?"
     ];
     let currentHintIndex = 0;
     function showHint() {
