--- a/Puzzle_page.html
+++ b/Puzzle_page.html
@@ -73,11 +73,11 @@ function googleTranslateElementInit() {
 <script>
     const hintBox = document.getElementById("hintBox");
     const hintsList = [
-        "This cipher does not need a key",
-        "The English alphabet has 26 letters, this cipher cuts it in half",
+        "When doing nothing, nothing is left undone. -Lao Tzu, Tao Te Ching",
+        "The key is there is no key",
         "This cipher ROTates letters",
 	"Which cipher works if the key is blank?",
-	"Try ROT13 with your favorite number""
+	"Try ROT13 with your favorite number"
     ];
     let currentHintIndex = 0;
     function showHint() {
