--- a/Puzzle_page5.html
+++ b/Puzzle_page5.html
@@ -41,7 +41,7 @@ function googleTranslateElementInit() {
     <div class="box" id="puzzle-box">
         <h2>Puzzle 1</h2>
         <!-- Cipher text -->
-        <div id ="puzzleText">Jsopq Zstzg!</div>
+        <div id ="puzzleText">KK evatf bs cbjre jrer znqr va gur Ybeq bs gur Evatf.1,xotm zu xark znks grr.Faz dus!</div>
         <!-- Text box for puzzle input -->
         <input type="text" id="key" class="text-input" placeholder="Type your answer here...">
         <label for="Ciphers">Select a cipher:</label>
@@ -73,9 +73,11 @@ function googleTranslateElementInit() {
 <script>
     const hintBox = document.getElementById("hintBox");
     const hintsList = [
-        "Hail Caesar!",
-        "I = 1, V = 5, X = 10",
-        "What's nine plus ten(not 19)"
+        "This puzzle is encrypted with three different ciphers",
+        "The first step is to stop looking for a key",
+        "Three rings for the elven-kings, seven for the dwarf-lords, nine for Mortal Men, and one more...",
+        "Cipher order is: ROT13 caesar, secret",
+        "the final key is in,the text"
     ];
     let currentHintIndex = 0;
     function showHint() {
