--- a/Puzzle_page3.html
+++ b/Puzzle_page3.html
@@ -18,6 +18,10 @@ function googleTranslateElementInit() {
 
 <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
+<audio id="clickSound">
+    <source src="bright_button_click.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+</audio>	
 		
 </head>
 <body>
@@ -51,7 +55,7 @@ function googleTranslateElementInit() {
                 <option value="vigenere">Vigenere</option>
 		<option value="secret">Secret Cipher</option>
             </select>
-        <button onclick="updateText()">Decrypt</button>
+        <button onclick="updateText(); document.getElementById('clickSound').play()">Decrypt</button>
     </div>
 
     <!-- Output Box -->
@@ -90,6 +94,8 @@ function googleTranslateElementInit() {
             const blankLine = document.createElement('br');
             hintBox.appendChild(blankLine);
             currentHintIndex++;
+		// Play click sound
+            document.getElementById("clickSound").play();	
         } else {
             alert("No more hints available!");
         }
