--- a/Puzzle_page5.html
+++ b/Puzzle_page5.html
@@ -39,7 +39,7 @@ function googleTranslateElementInit() {
 <div class="container">
     <!-- Puzzle Box -->
     <div class="box" id="puzzle-box">
-        <h2>Puzzle 1</h2>
+        <h2>Final Puzzle</h2>
         <!-- Cipher text -->
         <div id ="puzzleText">KK evatf bs cbjre jrer znqr va gur Ybeq bs gur Evatf.1,xotm zu xark znks grr.Faz dus!</div>
         <!-- Text box for puzzle input -->
