--- a/Puzzle_page5.html
+++ b/Puzzle_page5.html
@@ -18,6 +18,11 @@ function googleTranslateElementInit() {
 
 <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
+<audio id="clickSound">
+  <source src="bright_button_click.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
+
 		
 </head>
 <body>
@@ -50,7 +55,7 @@ function googleTranslateElementInit() {
                 <option value="caesar">Caesar</option>
                 <option value="vigenere">Vigenere</option>
             </select>
-        <button onclick="updateText()">Decrypt</button>
+        <button onclick="updateText(); document.getElementById('clickSound').play()">Decrypt</button>
     </div>
 
     <!-- Output Box -->
@@ -89,6 +94,8 @@ function googleTranslateElementInit() {
             const blankLine = document.createElement('br');
             hintBox.appendChild(blankLine);
             currentHintIndex++;
+		// Play click sound
+            document.getElementById("clickSound").play();
         } else {
             alert("No more hints available!");
         }
