--- a/Puzzle_page2.html
+++ b/Puzzle_page2.html
@@ -42,11 +42,11 @@ function googleTranslateElementInit() {
 </nav>
 
 <h1>Puzzle Page</h1> <!-- Bold header. -->
-
+<div id="confetti-container"></div>
 <div class="container">
     <!-- Puzzle Box -->
     <div class="box" id="puzzle-box">
-        <h2>Puzzle 2</h2>
+        <h2 id="identifier">Puzzle 2</h2>
         <!-- Cipher text -->
         <div id ="puzzleText">Htwwjhy! Ymnx nx f hfjxfw hnumjw, bmnhm mfx gjjs zxji ktw tajw 2000 djfwx.</div>
         <!-- Text box for puzzle input -->
