--- a/Puzzle_page3.html
+++ b/Puzzle_page3.html
@@ -42,11 +42,11 @@ function googleTranslateElementInit() {
 </nav>
 
 <h1>Puzzle Page</h1> <!-- Bold header -->
-
+<div id="confetti-container"></div>
 <div class="container">
     <!-- Puzzle Box -->
     <div class="box" id="puzzle-box">
-        <h2>Puzzle 3</h2>
+        <h2 id="identifier">Puzzle 3</h2>
         <!-- Cipher text -->
         <div id ="puzzleText">Pwfi krvm! Xjwv ewslgf mu vsoszlch qqfh ecptnwfevsg, ov kh wjwixu heev pghwit eeusg qb xjs pghwitg epr pgbjxj rj hki qrhg zstr.</div>
         <!-- Text box for puzzle input -->
