--- a/Puzzle_page4.html
+++ b/Puzzle_page4.html
@@ -42,11 +42,11 @@ function googleTranslateElementInit() {
 </nav>
 
 <h1>Puzzle Page</h1> <!-- Bold header -->
-
+<div id="confetti-container"></div>
 <div class="container">
     <!-- Puzzle Box -->
     <div class="box" id="puzzle-box">
-        <h2>Puzzle 4</h2>
+        <h2 id="identifier">Puzzle 4</h2>
         <!-- Cipher text -->
         <div id ="puzzleText">Trowuskxmqwafqt, qfx sustnft lyh bdkk dyszvu! Wzv oual svpcdv ji lyh bdkk pdh!</div>
         <!-- Text box for puzzle input -->
