--- a/Puzzle_page2.html
+++ b/Puzzle_page2.html
@@ -57,7 +57,7 @@ function googleTranslateElementInit() {
                 <option value="caesar">Caesar</option>
                 <option value="vigenere">Vigenere</option>
             </select>
-        <button onclick="updateText(); document.getElementById('clickSound').play()">Decrypt</button>
+         <button onclick="updateText(); checkCorrect(); document.getElementById('clickSound').play()">Decrypt</button>
     </div>
 
     <!-- Output Box -->
