--- a/Puzzle_page4.html
+++ b/Puzzle_page4.html
@@ -58,7 +58,7 @@ function googleTranslateElementInit() {
                 <option value="vigenere">Vigenere</option>
 		<option value="secret">Secret Cipher</option>
             </select>
-        <button onclick="updateText(); document.getElementById('clickSound').play()">Decrypt</button>
+         <button onclick="updateText(); checkCorrect(); document.getElementById('clickSound').play()">Decrypt</button>
     </div>
 
     <!-- Output Box -->
