--- a/Puzzle_page.html
+++ b/Puzzle_page.html
@@ -6,7 +6,7 @@
     <title>Puzzle Page</title>
 	
 	 
-    <!-- Link to the main.css stylesheet -->
+    <!-- Link to the main.css stylesheet. -->
     <link rel="stylesheet" href="main.css">  
    <div id="google_translate_element"></div>
 
