--- a/Puzzle_page5.html
+++ b/Puzzle_page5.html
@@ -57,6 +57,7 @@ function googleTranslateElementInit() {
                 <option value="rot13">rot13</option>
                 <option value="caesar">Caesar</option>
                 <option value="vigenere">Vigenere</option>
+		<option value="secret">Secret Cipher</option>	
             </select>
         <button onclick="updateText(); checkCorrect(); document.getElementById('clickSound').play()">Decrypt</button>
     </div>
