--- a/Puzzle_page.html
+++ b/Puzzle_page.html
@@ -42,8 +42,8 @@ function googleTranslateElementInit() {
 </nav>
 
 <h1>Puzzle Page</h1> <!-- Bold header -->
-	<br></br>
-<h1>Puzzles Solved Counter: 0 </h1>
+	
+<br>Puzzles Solved Counter: 0 </br>
 <div id="confetti-container"></div>
 <div class="container">
     <!-- Puzzle Box -->
