--- a/Puzzle_page.html
+++ b/Puzzle_page.html
@@ -25,7 +25,12 @@ function googleTranslateElementInit() {
 <audio id="errorSound">
     <source src="error_sound.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
-</audio>		
+</audio>
+<audio id="confettiSound">
+    <source src="confetti_sound.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+</audio>
+	
 </head>
 <body>
 
