--- a/Puzzle_page5.html
+++ b/Puzzle_page5.html
@@ -26,6 +26,10 @@ function googleTranslateElementInit() {
     <source src="error_sound.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
 </audio>
+<audio id="confettiSound">
+    <source src="confetti_sound.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+</audio>
 	
 </head>
 <body>
