--- a/Puzzle_page.html
+++ b/Puzzle_page.html
@@ -48,7 +48,7 @@ function googleTranslateElementInit() {
 
 <h1>Puzzle Page</h1> <!-- Bold header -->
 	
-<br>Puzzles Solved Counter: 0 </br>
+<h1>Puzzles Solved Counter: 0 </h1>
 <div id="confetti-container"></div>
 <div class="container">
     <!-- Puzzle Box -->
