--- a/Puzzle_page3.html
+++ b/Puzzle_page3.html
@@ -47,6 +47,7 @@ function googleTranslateElementInit() {
 </nav>
 
 <h1>Puzzle Page</h1> <!-- Bold header -->
+	<h1>Puzzles Solved Counter: 1 </h1>
 <div id="confetti-container"></div>
 <div class="container">
     <!-- Puzzle Box -->
