--- a/index.html
+++ b/index.html
@@ -55,7 +55,13 @@ function googleTranslateElementInit() {
 	</ul>
 </nav>
 <h1 id="shadow">Cryptography Puzzle</h1>
-<h2>Functional Prototype</h2>
+<h2>Welcome to the puzzle!</h2>
+<p>To solve each puzzle, choose a cipher from the selector and enter a key in the text box.</p>
+<p>Each puzzle has a different key/cipher combination</p>
+<p>Press the hint button to get hints, with a maximum of 5</p>
+<p>It is recommended that you start on puzzle 1 and progress to puzzle 5, but it is possible to do the puzzles independently</p>
+<p>ROT13 does not require any key, caesar requires a number, vigenere requires a word, secret requires a number and a word in the format (number),(word).</p>	
+	
 
 
 
