--- a/Puzzle_page4.html
+++ b/Puzzle_page4.html
@@ -67,7 +67,7 @@ function googleTranslateElementInit() {
     </div>
 
     <!-- Output Box -->
-    <div class="box" id="output-box">
+    <div class="box4" id="output-box">
         <h2>Answer</h2>
         <!-- Plaintext for decrypted text -->
         <p>Hint: (button)</p>
