--- a/Puzzle_page5.html
+++ b/Puzzle_page5.html
@@ -50,7 +50,7 @@ function googleTranslateElementInit() {
 <div id="confetti-container"></div>
 <div class="container">
     <!-- Puzzle Box -->
-    <div class="box" id="puzzle-box">
+    <div class="box5" id="puzzle-box">
         <h2 id="identifier">Final Puzzle</h2>
         <!-- Cipher text -->
         <div id ="puzzleText">KK evatf bs cbjre jrer znqr va gur Ybeq bs gur Evatf.1,xotm zu xark znks grr.Faz dus!</div>
