--- a/Puzzle_page4.html
+++ b/Puzzle_page4.html
@@ -50,7 +50,7 @@ function googleTranslateElementInit() {
 <div id="confetti-container"></div>
 <div class="container">
     <!-- Puzzle Box -->
-    <div class="box" id="puzzle-box">
+    <div class="box4" id="puzzle-box">
         <h2 id="identifier">Puzzle 4</h2>
         <!-- Cipher text -->
         <div id ="puzzleText">Trowuskxmqwafqt, qfx sustnft lyh bdkk dyszvu! Wzv oual svpcdv ji lyh bdkk pdh!</div>
