--- a/Puzzle_page3.html
+++ b/Puzzle_page3.html
@@ -50,7 +50,7 @@ function googleTranslateElementInit() {
 <div id="confetti-container"></div>
 <div class="container">
     <!-- Puzzle Box -->
-    <div class="box" id="puzzle-box">
+    <div class="box3" id="puzzle-box">
         <h2 id="identifier">Puzzle 3</h2>
         <!-- Cipher text -->
         <div id ="puzzleText">Pwfi krvm! Xjwv ewslgf mu vsoszlch qqfh ecptnwfevsg, ov kh wjwixu heev pghwit eeusg qb xjs pghwitg epr pgbjxj rj hki qrhg zstr.</div>
