--- a/Puzzle_page2.html
+++ b/Puzzle_page2.html
@@ -66,7 +66,7 @@ function googleTranslateElementInit() {
     </div>
 
     <!-- Output Box -->
-    <div class="box" id="output-box">
+    <div class="box2" id="output-box">
         <h2>Answer</h2>
         <!-- Plaintext for decrypted text -->
         <p>Hint: (button)</p>
@@ -74,7 +74,7 @@ function googleTranslateElementInit() {
         <p id="output">THIS IS THE PUZZLE (will be encrypted)</p>
     </div>
 
-    <div class="box" id="hintBox">
+    <div class="box2" id="hintBox">
         <span class="hint"></span>
 
         <button id="hintButton" onclick="showHint()">Show Hint</button>
