--- a/Puzzle_page4.html
+++ b/Puzzle_page4.html
@@ -75,7 +75,7 @@ function googleTranslateElementInit() {
         <p id="output">THIS IS THE PUZZLE (will be encrypted)</p>
     </div>
 
-    <div class="box" id="hintBox">
+    <div class="box4" id="hintBox">
         <span class="hint"></span>
 
         <button id="hintButton" onclick="showHint()">Show Hint</button>
