--- a/Puzzle_page5.html
+++ b/Puzzle_page5.html
@@ -67,7 +67,7 @@ function googleTranslateElementInit() {
     </div>
 
     <!-- Output Box -->
-    <div class="box" id="output-box">
+    <div class="box5" id="output-box">
         <h2>Answer</h2>
         <!-- Plaintext for decrypted text -->
         <p>Hint: (button)</p>
@@ -75,7 +75,7 @@ function googleTranslateElementInit() {
         <p id="output">THIS IS THE PUZZLE (will be encrypted)</p>
     </div>
 
-    <div class="box" id="hintBox">
+    <div class="box5" id="hintBox">
         <span class="hint"></span>
 
         <button id="hintButton" onclick="showHint()">Show Hint</button>
