--- a/Puzzle_page2.html
+++ b/Puzzle_page2.html
@@ -50,7 +50,7 @@ function googleTranslateElementInit() {
 <div id="confetti-container"></div>
 <div class="container">
     <!-- Puzzle Box -->
-    <div class="box2" id="puzzle-box">
+    <div class="box" id="puzzle-box">
         <h2 id="identifier">Puzzle 2</h2>
         <!-- Cipher text -->
         <div id ="puzzleText">Htwwjhy! Ymnx nx f hfjxfw hnumjw, bmnhm mfx gjjs zxji ktw tajw 2000 djfwx.</div>
@@ -74,7 +74,7 @@ function googleTranslateElementInit() {
         <p id="output">THIS IS THE PUZZLE (will be encrypted)</p>
     </div>
 
-    <div class="box2" id="hintBox">
+    <div class="box" id="hintBox">
         <span class="hint"></span>
 
         <button id="hintButton" onclick="showHint()">Show Hint</button>
