--- a/Puzzle_page.html
+++ b/Puzzle_page.html
@@ -11,7 +11,7 @@
    <div id="translation"></div>
 
 <script type="text/javascript">
-function googleTranslateElementInit() { 
+function translatePage() { 
   new google.translate.TranslateElement({pageLanguage: 'en'}, 'translation');
 }
 </script>
