--- a/Puzzle_page4.html
+++ b/Puzzle_page4.html
@@ -8,16 +8,16 @@
 	 
     <!-- Link to the main.css stylesheet -->
     <link rel="stylesheet" href="main.css">  
-   <div id="google_translate_element"></div>
+      <div id="translation"></div>
 
 <script type="text/javascript">
-function googleTranslateElementInit() {
-  new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+function translatePage() { 
+  new google.translate.TranslateElement({pageLanguage: 'en'}, 'translation');
 }
 </script>
 
-<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-
+<script type="text/javascript" src="https://translate.google.com/translate_a/element.js?
+cb=googleTranslateElementInit"></script>
 <audio id="clickSound">
     <source src="bright_button_click.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
