--- a/Puzzle_page3.html
+++ b/Puzzle_page3.html
@@ -8,16 +8,15 @@
 	 
     <!-- Link to the main.css stylesheet -->
     <link rel="stylesheet" href="main.css">  
-     <div id="translation"></div>
+<div id="google_translate_element"></div>
 
 <script type="text/javascript">
-function translatePage() { 
-  new google.translate.TranslateElement({pageLanguage: 'en'}, 'translation');
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
 }
 </script>
 
-<script type="text/javascript" src="https://translate.google.com/translate_a/element.js?
-cb=googleTranslateElementInit"></script>
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
 <audio id="clickSound">
     <source src="bright_button_click.mp3" type="audio/mpeg">
